add functionality of remote assistance and adjust curent DB relationships between tables
