# api-docs.yaml
@@ -1196,6 +1196,16 @@ components:
         deviceId:
           type: string
           format: uuid
+        deviceHostname:
+          type: string
+        deviceFqdn:
+          type: string
+        primaryIp:
+          type: string
+        remoteAssistanceTarget:
+          type: string
+        remoteAssistanceUri:
+          type: string
         requestedByUsername:
           type: string
         requestedByDisplayName:
